Improve relative file and path stuff